# pico_pc_pilot

./: CMakeLists.txt  README.md  codes_to_actions.hpp  main.cpp  test_USB_main.cpp  test_pilot_main.cpp  upload.sh
irdecoders/: basedecoder.cpp  basedecoder.hpp  necdecoder.cpp  necdecoder.hpp  rc5decoder.cpp  rc5decoder.hpp
